--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+anoncreds==0.2.0.dev6
 anyio==3.6.2
 aries-askar==0.2.8
 cached-property==1.5.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.3
 fastapi==0.95.1
 h11==0.14.0
@@ -9,10 +12,13 @@ idna==3.4
 pydantic==1.10.7
 python-dotenv==1.0.0
 PyYAML==6.0
+requests==2.31.0
 sniffio==1.3.0
 starlette==0.26.1
 typing_extensions==4.5.0
+urllib3==2.2.0
 uvicorn==0.22.0
 uvloop==0.17.0
+validators==0.22.0
 watchfiles==0.19.0
 websockets==11.0.3
